--- a/projects/index.html
+++ b/projects/index.html
@@ -15,3 +15,5 @@ ul > li > p { margin:0; display:inline; }
 <li><a href="{{ project.url }}">{{ project.name }}</a> — {{ project.descr | markdownify }}</li>
 {% endfor %}
 </ul>
+
+<h2>Other things</h2>
