--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@ div.posts div.end {
   padding-top:40px;
 }
 
-h2 {
-  font-family:'ITCAvantGardePro-Bold';
-  margin:0;
-}
+/*h2 {  font-family:'ITCAvantGardePro-Bold';  margin:0;} */
 
 .content {
   display: flex;
