--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@ title: You dun fuq'd up.
 ---
 
 <h2>404</h2>
-<p>Seems you're looking for something that doesn't exist. Adjust your expectations, and try searching this site:</p>
+<p>Seems you're looking for something that doesn't exist. While I'm a fan of the metaphysical and Platonism, I recommend that you adjust your expectations, and try searching this site:</p>
 <form action="http://www.google.com/cse" id="cse-search-box">
 
  <div>
